--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -2,7 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="5dp">
+
 
     <ImageView
         android:id="@+id/ivPosterImage"
@@ -10,11 +13,12 @@
         android:layout_height="135dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_marginRight="5dp"
         app:srcCompat="@android:color/black" />
 
     <TextView
         android:id="@+id/tvTitle"
-        android:layout_width="294dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_toEndOf="@+id/ivPosterImage"
@@ -23,10 +27,11 @@
 
     <TextView
         android:id="@+id/tvOverview"
-        android:layout_width="292dp"
+        android:layout_width="279dp"
         android:layout_height="104dp"
         android:layout_below="@+id/tvTitle"
         android:layout_toEndOf="@+id/ivPosterImage"
+        android:layout_toRightOf="@+id/ivPosterImage"
         android:text="TextView"
         tools:text="Movie overview and synoposis" />
 </RelativeLayout>
