Extra Activity Added - new UI

--- a/app/src/main/res/layout-land/item_movie.xml
+++ b/app/src/main/res/layout-land/item_movie.xml
@@ -22,7 +22,8 @@
         android:layout_alignParentTop="true"
         android:layout_toEndOf="@+id/ivBackdropImage"
         android:text="Movie Title"
-        android:textAppearance="@android:style/TextAppearance.Medium" />
+        android:textAppearance="@android:style/TextAppearance.Medium"
+        android:fontFamily="@font/limelight"/>
 
     <TextView
         android:id="@+id/tvOverview"
