--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -13,7 +13,8 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:text="TextView"
-        android:textAppearance="@android:style/TextAppearance.Large" />
+        android:textAppearance="@android:style/TextAppearance.Large"
+        android:fontFamily="@font/limelight"/>
 
     <RatingBar
         android:id="@+id/rbVoteAverage"
@@ -31,5 +32,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/rbVoteAverage"
-        android:text="TextView" />
+        android:text="TextView"
+        android:fontFamily="sans-serif-condensed"/>
 </RelativeLayout>
