Extra Activity Added - new UI - partial butter knife- and TRAILERS!!!

--- a/app/src/main/res/values/secrets.xml
+++ b/app/src/main/res/values/secrets.xml
@@ -2,4 +2,5 @@
 <resources>
 
     <string name="api_key" >75c9041a521f2ac01b64a84e778f1764</string>
+    <string name="youtube_api_key"> AIzaSyCK41BSnGb59DPvNf9U9mzHU2IAnhTosyQ</string>
 </resources>
