--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/tvTitle"
+        android:layout_below="@+id/ivYoutube"
         android:numStars="5"
         android:stepSize=".5" />
 
@@ -34,4 +34,12 @@
         android:layout_below="@+id/rbVoteAverage"
         android:text="TextView"
         android:fontFamily="sans-serif-condensed"/>
+
+    <ImageView
+        android:id="@+id/ivYoutube"
+        android:layout_width="wrap_content"
+        android:layout_height="176dp"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/tvTitle"
+        app:srcCompat="@drawable/flicks_movie_placeholder" />
 </RelativeLayout>
